--- a/packages/core.jwt-session/tsconfig.json
+++ b/packages/core.jwt-session/tsconfig.json
@@ -5,7 +5,8 @@
         "module": "commonjs",
         "moduleResolution": "node",
         "lib": [
-            "ESNext"
+            "ESNext",
+            "DOM"
         ],
         "allowJs": false,
         "checkJs": false,
