--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "packages/lib.authentication",
     "packages/lib.cache",
     "packages/lib.collection",
-    "packages/lib.cookie-session",
     "packages/lib.decorators",
     "packages/lib.email",
     "packages/lib.exception",
@@ -25,6 +24,7 @@
     "packages/lib.pool",
     "packages/lib.sms",
     "packages/lib.unit-test",
+    "packages/lib.user-session",
     "packages/lib.utils",
     "packages/module-builder"
   ]
