--- a/packages/lib.jwt-user-session/package.json
+++ b/packages/lib.jwt-user-session/package.json
@@ -1,11 +1,11 @@
 {
-    "name": "@thermopylae/lib.user-session",
-    "description": "Stateful implementation of the user session.",
+    "name": "@thermopylae/lib.jwt-user-session",
+    "description": "Stateless user session implementation based on JsonWebTokens.",
     "keywords": [
         "library"
     ],
     "version": "0.0.1",
-    "author": "Rusu Marin dimarusu2000@gmail.com",
+    "author": "Rusu Marin <dimarusu2000@gmail.com>",
     "main": "dist/index.js",
     "exports": "./dist/index.js",
     "types": "dist/index.d.ts",
@@ -33,14 +33,15 @@
     "dependencies": {
         "@thermopylae/core.declarations": "0",
         "@thermopylae/lib.exception": "0",
+        "jsonwebtoken": "8",
         "uid-safe": "2"
     },
     "devDependencies": {
         "@thermopylae/lib.cache": "0",
-        "@thermopylae/lib.logger": "0",
         "@thermopylae/lib.unit-test": "0",
         "@thermopylae/lib.user-session.commons": "0",
         "@thermopylae/module-builder": "0",
+        "@types/jsonwebtoken": "8",
         "@types/uid-safe": "2"
     },
     "peerDependencies": {
