--- a/packages/core.cookie-session/package.json
+++ b/packages/core.cookie-session/package.json
@@ -36,14 +36,12 @@
         "@thermopylae/core.user-session.commons": "0",
         "@thermopylae/lib.exception": "0",
         "@thermopylae/lib.logger": "0",
-        "@thermopylae/lib.user-session": "0",
-        "lodash.debounce": "4"
+        "@thermopylae/lib.user-session": "0"
     },
     "devDependencies": {
         "@thermopylae/core.adapter.express": "0",
         "@thermopylae/lib.unit-test": "0",
-        "@thermopylae/module-builder": "0",
-        "@types/lodash.debounce": "4"
+        "@thermopylae/module-builder": "0"
     },
     "peerDependencies": {
         "chai": "4",
