--- a/packages/core.cookie-session/package.json
+++ b/packages/core.cookie-session/package.json
@@ -36,12 +36,14 @@
         "@thermopylae/core.user-session.commons": "0",
         "@thermopylae/lib.exception": "0",
         "@thermopylae/lib.logger": "0",
-        "@thermopylae/lib.user-session": "0"
+        "@thermopylae/lib.user-session": "0",
+        "cookie": "0"
     },
     "devDependencies": {
         "@thermopylae/core.adapter.express": "0",
         "@thermopylae/lib.unit-test": "0",
-        "@thermopylae/module-builder": "0"
+        "@thermopylae/module-builder": "0",
+        "@types/cookie": "0"
     },
     "peerDependencies": {
         "chai": "4",
