--- a/packages/core.cookie-session/package.json
+++ b/packages/core.cookie-session/package.json
@@ -43,7 +43,21 @@
         "@thermopylae/core.adapter.express": "0",
         "@thermopylae/lib.unit-test": "0",
         "@thermopylae/module-builder": "0",
-        "@types/cookie": "0"
+        "@types/cookie": "0",
+        "@types/cookie-parser": "1",
+        "@types/dotenv": "8",
+        "@types/express": "4",
+        "@types/express-request-id": "1",
+        "@types/morgan": "1",
+        "@types/node-fetch": "2",
+        "body-parser": "1",
+        "cookie-parser": "1",
+        "dotenv": "9",
+        "express": "4",
+        "express-async-handler": "1",
+        "express-request-id": "1",
+        "morgan": "1",
+        "node-fetch": "2"
     },
     "peerDependencies": {
         "chai": "4",
