--- a/packages/core.cookie-session/tsconfig.json
+++ b/packages/core.cookie-session/tsconfig.json
@@ -1,43 +1,19 @@
 {
-  "compilerOptions": {
-    "incremental": true,
-    "target": "esnext",
-    "module": "esnext",
-    "moduleResolution": "node",
-    "lib": [
-        "ESNext"
-    ],
-    "allowJs": false,
-    "checkJs": false,
-    "declaration": true,
-    "rootDir": ".",
-    "outDir": "dist",
-    "composite": true,
-    "tsBuildInfoFile": "build/tsbuildinfo",
-    "removeComments": false,
-    "strict": true,
-    "noImplicitAny": true,
-    "strictNullChecks": true,
-    "strictFunctionTypes": true,
-    "strictBindCallApply": true,
-    "strictPropertyInitialization": true,
-    "noImplicitThis": true,
-    "alwaysStrict": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
-    "noImplicitReturns": true,
-    "noFallthroughCasesInSwitch": true,
-    "esModuleInterop": true,
-    "forceConsistentCasingInFileNames": true,
-    "experimentalDecorators": true
-  },
-  "include": [
-    "lib/**/*.ts",
-    "test/**/*.ts"
-  ],
-  "exclude": [
-    "node_modules",
-    "dist",
-    "build"
-  ]
+    "extends": "../../node_modules/@thermopylae/module-builder/lib/configs/tsconfig.json",
+    "compilerOptions": {
+        "rootDir": ".",
+        "tsBuildInfoFile": "build/tsbuildinfo",
+        "outDir": "dist",
+        "baseUrl": "../../node_modules",
+        "paths": {
+            "@thermopylae/core.user-session.commons/*": [
+                "./@thermopylae/core.user-session.commons/dist/*"
+            ]
+        },
+        "module": "commonjs"
+    },
+    "include": [
+        "lib/**/*.ts",
+        "test/**/*.ts"
+    ]
 }
