--- a/packages/core.cookie-session/package.json
+++ b/packages/core.cookie-session/package.json
@@ -57,7 +57,8 @@
         "express-async-handler": "1",
         "express-request-id": "1",
         "morgan": "1",
-        "node-fetch": "2"
+        "node-fetch": "2",
+        "unix-timestamp": "0"
     },
     "peerDependencies": {
         "chai": "4",
