minor fixes in user session packages

--- a/packages/core.jwt-session/package.json
+++ b/packages/core.jwt-session/package.json
@@ -32,10 +32,10 @@
     },
     "dependencies": {
         "@thermopylae/core.declarations": "0",
-        "@thermopylae/lib.jwt-user-session": "0",
         "@thermopylae/core.user-session.commons": "0",
         "@thermopylae/lib.cache": "0",
         "@thermopylae/lib.exception": "0",
+        "@thermopylae/lib.jwt-user-session": "0",
         "@thermopylae/lib.logger": "0",
         "cookie": "0"
     },
@@ -46,10 +46,12 @@
         "@thermopylae/lib.user-session.commons": "0",
         "@thermopylae/module-builder": "0",
         "@types/benchmark": "2",
+        "@types/capitalize": "2",
         "@types/cookie": "0",
         "@types/dotenv": "8",
         "@types/node-fetch": "2",
         "benchmark": "2",
+        "capitalize": "2",
         "dotenv": "8",
         "fastify": "3",
         "fastify-cookie": "5",
