--- a/packages/lib.authentication/package.json
+++ b/packages/lib.authentication/package.json
@@ -31,10 +31,11 @@
         "unpublish": "npm unpublish --force $npm_package_name"
     },
     "dependencies": {
+        "@otplib/core": "12",
+        "@otplib/plugin-crypto": "12",
+        "@otplib/plugin-thirty-two": "12",
         "@thermopylae/core.declarations": "0",
         "@thermopylae/lib.exception": "0",
-        "@thermopylae/lib.utils": "0",
-        "owasp-password-strength-test": "1",
         "uid-safe": "2"
     },
     "devDependencies": {
@@ -46,11 +47,11 @@
         "@thermopylae/lib.unit-test": "0",
         "@thermopylae/module-builder": "0",
         "@types/bcrypt": "3",
-        "@types/uid-safe": "2",
         "@types/geoip-lite": "1",
         "@types/mongoose": "5",
         "@types/owasp-password-strength-test": "1",
         "@types/ronomon__crypto-async": "2",
+        "@types/uid-safe": "2",
         "argon2": "0",
         "bcrypt": "5",
         "keypair": "1",
