--- a/packages/lib.authentication/package.json
+++ b/packages/lib.authentication/package.json
@@ -36,6 +36,7 @@
         "@otplib/plugin-thirty-two": "12",
         "@thermopylae/core.declarations": "0",
         "@thermopylae/lib.exception": "0",
+        "qrcode": "1",
         "uid-safe": "2"
     },
     "devDependencies": {
@@ -50,6 +51,7 @@
         "@types/geoip-lite": "1",
         "@types/mongoose": "5",
         "@types/owasp-password-strength-test": "1",
+        "@types/qrcode": "1",
         "@types/ronomon__crypto-async": "2",
         "@types/uid-safe": "2",
         "argon2": "0",
