--- a/packages/lib.authentication/package.json
+++ b/packages/lib.authentication/package.json
@@ -44,26 +44,20 @@
         "zxcvbn": "4"
     },
     "devDependencies": {
-        "@ronomon/crypto-async": "5",
         "@thermopylae/lib.cache": "0",
-        "@thermopylae/lib.email": "0",
-        "@thermopylae/lib.jwt-user-session": "0",
-        "@thermopylae/lib.sms": "0",
         "@thermopylae/lib.unit-test": "0",
         "@thermopylae/module-builder": "0",
-        "@types/bcrypt": "3",
-        "@types/geoip-lite": "1",
         "@types/mongoose": "5",
         "@types/node-fetch": "2",
+        "@types/object-hash": "2",
         "@types/qrcode": "1",
-        "@types/ronomon__crypto-async": "2",
         "@types/string-similarity": "4",
         "@types/uid-safe": "2",
         "@types/zxcvbn": "4",
-        "bcrypt": "5",
         "keypair": "1",
         "mongodb-memory-server": "6",
-        "mongoose": "5"
+        "mongoose": "5",
+        "object-hash": "2"
     },
     "peerDependencies": {
         "chai": "4",
