--- a/packages/lib.authentication/package.json
+++ b/packages/lib.authentication/package.json
@@ -48,6 +48,7 @@
         "@thermopylae/lib.unit-test": "0",
         "@thermopylae/lib.utils": "0",
         "@thermopylae/module-builder": "0",
+        "@types/bcrypt": "5",
         "@types/mongoose": "5",
         "@types/node-fetch": "2",
         "@types/object-hash": "2",
@@ -55,6 +56,7 @@
         "@types/string-similarity": "4",
         "@types/uid-safe": "2",
         "@types/zxcvbn": "4",
+        "bcrypt": "5",
         "keypair": "1",
         "mongodb-memory-server": "6",
         "mongoose": "5",
