--- a/packages/lib.authentication/tsconfig.json
+++ b/packages/lib.authentication/tsconfig.json
@@ -7,7 +7,8 @@
         "lib": [
             "ESNext",
             "DOM"
-        ]
+        ],
+        "module": "commonjs"
     },
     "include": [
         "lib/**/*.ts",
