--- a/packages/module-builder/lib/configs/tsconfig.json
+++ b/packages/module-builder/lib/configs/tsconfig.json
@@ -13,7 +13,8 @@
     "module": "CommonJS",
     "moduleResolution": "Node",
     "lib": [
-      "ESNext"
+      "ESNext",
+      "DOM"
     ],
 
     "removeComments": false,
