--- a/packages/lib.sms/package.json
+++ b/packages/lib.sms/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@thermopylae/lib.sms",
-    "description": "Sms client library",
+    "description": "Sms client library.",
     "keywords": [
         "library"
     ],
@@ -31,11 +31,11 @@
         "unpublish": "npm unpublish --force $npm_package_name"
     },
     "dependencies": {
+        "@thermopylae/core.declarations": "0",
         "@thermopylae/lib.exception": "0",
         "twilio": "3"
     },
     "devDependencies": {
-        "@thermopylae/core.declarations": "0",
         "@thermopylae/lib.unit-test": "0",
         "@thermopylae/module-builder": "0"
     },
@@ -49,7 +49,7 @@
         ]
     },
     "engines": {
-        "node": ">= 14"
+        "node": ">= 16"
     },
     "license": "ISC",
     "type": "commonjs"
