demo.express app bootstrap

--- a/packages/core.user-session.commons/package.json
+++ b/packages/core.user-session.commons/package.json
@@ -57,6 +57,5 @@
         "node": ">= 16"
     },
     "license": "ISC",
-    "type": "commonjs",
-    "exports": "./dist/index.js"
+    "type": "commonjs"
 }
