demo.express rest api

--- a/packages/demo.express/package.json
+++ b/packages/demo.express/package.json
@@ -46,29 +46,29 @@
         "@thermopylae/lib.geoip": "0",
         "@thermopylae/lib.jwt-user-session": "0",
         "@thermopylae/lib.sms": "0",
-        "body-parser": "^1.19.0",
-        "cookie-parser": "^1.4.5",
+        "body-parser": "1",
+        "cookie-parser": "1",
         "deep-freeze": "0",
         "express": "4",
         "express-async-handler": "1",
-        "express-request-id": "^1.4.1",
+        "express-request-id": "1",
         "express-unless": "0",
         "farmhash": "3",
-        "helmet": "^4.6.0",
-        "is-string-int": "^1.0.1",
+        "helmet": "4",
+        "is-string-int": "1",
         "jsonfile": "6",
-        "morgan": "^1.10.0",
+        "morgan": "1",
         "node-fetch": "2"
     },
     "devDependencies": {
         "@thermopylae/lib.unit-test": "0",
         "@thermopylae/module-builder": "0",
-        "@types/cookie-parser": "^1.4.2",
+        "@types/cookie-parser": "1",
         "@types/deep-freeze": "0",
-        "@types/express-request-id": "^1.4.1",
+        "@types/express-request-id": "1",
         "@types/express-unless": "0",
         "@types/jsonfile": "6",
-        "@types/morgan": "^1.9.2",
+        "@types/morgan": "1",
         "@types/node-fetch": "2"
     },
     "peerDependencies": {
