--- a/packages/demo.express/package.json
+++ b/packages/demo.express/package.json
@@ -48,6 +48,7 @@
         "@thermopylae/lib.sms": "0",
         "body-parser": "1",
         "cookie-parser": "1",
+        "cors": "2",
         "deep-freeze": "0",
         "express": "4",
         "express-async-handler": "1",
@@ -64,6 +65,7 @@
         "@thermopylae/lib.unit-test": "0",
         "@thermopylae/module-builder": "0",
         "@types/cookie-parser": "1",
+        "@types/cors": "2",
         "@types/deep-freeze": "0",
         "@types/express-request-id": "1",
         "@types/express-unless": "0",
