--- a/packages/lib.utils/package.json
+++ b/packages/lib.utils/package.json
@@ -6,6 +6,7 @@
     ],
     "version": "0.0.1",
     "author": "Rusu Marin <dimarusu2000@gmail.com>",
+    "repository": "https://github.com/marinrusu1997/thermopylae/tree/master/packages/lib.utils",
     "main": "dist/index.js",
     "exports": "./dist/index.js",
     "typings": "dist/index.d.ts",
@@ -56,6 +57,6 @@
     "engines": {
         "node": ">= 16"
     },
-    "license": "ISC",
+    "license": "MIT",
     "type": "commonjs"
 }
