--- a/packages/module-builder/package.json
+++ b/packages/module-builder/package.json
@@ -30,6 +30,7 @@
     "eslint-plugin-prettier": "3",
     "eslint-plugin-security": "1",
     "esm": "3",
+    "fs-extra": "10",
     "gulp": "4",
     "gulp-replace": "1",
     "http-server": "0",
@@ -42,5 +43,8 @@
     "typedoc": "0.20",
     "typedoc-neo-theme": "1",
     "typescript": "4.2"
+  },
+  "devDependencies": {
+    "@types/fs-extra": "9"
   }
 }
