--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "packages/core.redis",
     "packages/core.user-session.commons",
     "packages/demo.express",
+    "packages/dev.environment",
+    "packages/dev.unit-test",
     "packages/lib.api-validator",
     "packages/lib.async",
     "packages/lib.authentication",
@@ -28,11 +30,9 @@
     "packages/lib.jwt-user-session",
     "packages/lib.pool",
     "packages/lib.sms",
-    "packages/lib.unit-test",
     "packages/lib.user-session",
     "packages/lib.user-session.commons",
-    "packages/lib.utils",
-    "packages/module-builder"
+    "packages/lib.utils"
   ],
   "license": "MIT"
 }
