--- a/packages/dev.environment/.gitignore
+++ b/packages/dev.environment/.gitignore
@@ -1,36 +1,25 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
 # compiled output
-/build
-/dist
+/build/
+/dist/
 /dist-server
 /tmp
 /out-tsc
 /build/Release
 
 # testing
-/.nyc_output
-/coverage
-
-# environment
-.env
+/.nyc_output/
+/coverage/
+/report/
+/doc/
 
 # dependencies
-/node_modules
+/node_modules/
 package-lock.json
 
 # IDEs and editors
 /.idea
-.project
-.classpath
-.c9/
-*.launch
-.settings/
-*.sublime-workspace
-
-# IDE - VSCode
-.vscode/*
-!.vscode/settings.json
 .project
 .classpath
 .c9/
