--- a/packages/core.authentication/package.json
+++ b/packages/core.authentication/package.json
@@ -1,11 +1,12 @@
 {
     "name": "@thermopylae/core.authentication",
-    "description": "Core authentication module for HTTP interface.",
+    "description": "Implementations of repositories required by Authentication Library.",
     "keywords": [
         "core"
     ],
     "version": "0.0.1",
-    "author": "Rusu Marin dimarusu2000@gmail.com",
+    "author": "Rusu Marin <dimarusu2000@gmail.com>",
+    "repository": "https://github.com/marinrusu1997/thermopylae/tree/master/packages/core.authentication",
     "main": "dist/index.js",
     "exports": "./dist/index.js",
     "types": "dist/index.d.ts",
@@ -16,7 +17,6 @@
         "lint": "eslint \"lib/**/*.ts\" \"test/**/*.ts\" --fix",
         "build": "gulp build",
         "doc": "gulp doc",
-        "readme": "gulp readme",
         "test": "gulp test",
         "report": "gulp report",
         "coverage": "gulp coverage",
@@ -24,19 +24,14 @@
         "debug": "gulp debug",
         "clean": "gulp clean",
         "purge": "gulp purge",
-        "update": "gulp stickToMajorSemver && npm update --dev --force -verbose",
-        "bumpVersion": "timestamp=$(date \"+%s\") && npm version 0.0.$timestamp",
-        "precommit": "npm run lint",
-        "prepublishOnly": "npm run lint && npm run clean && npm run build && npm run bumpVersion && gulp stickToMajorSemver && gulp readme",
+        "prepublishOnly": "npm run lint && npm run clean && npm run build",
         "unpublish": "npm unpublish --force $npm_package_name"
     },
     "dependencies": {
         "@thermopylae/core.declarations": "0",
         "@thermopylae/core.mysql": "0",
         "@thermopylae/core.redis": "0",
-        "@thermopylae/lib.authentication": "0",
         "@thermopylae/lib.exception": "0",
-        "@thermopylae/core.logger": "0",
         "farmhash": "3",
         "fast-json-stable-stringify": "2"
     },
@@ -44,6 +39,8 @@
         "@thermopylae/dev.unit-test": "0",
         "@thermopylae/lib.utils": "0",
         "@thermopylae/dev.environment": "0",
+        "@thermopylae/lib.authentication": "0",
+        "@thermopylae/core.logger": "0",
         "@types/faker": "5",
         "dotenv": "10",
         "faker": "5"
@@ -60,6 +57,6 @@
     "engines": {
         "node": ">= 16"
     },
-    "license": "ISC",
+    "license": "MIT",
     "type": "commonjs"
 }
