--- a/packages/core.logger/.gitignore
+++ b/packages/core.logger/.gitignore
@@ -9,10 +9,10 @@
 /build/Release
 
 # testing
-/.nyc_output
-/coverage
-/report
-/doc
+/.nyc_output/
+/coverage/
+/report/
+/doc/
 
 # environment
 .env
@@ -33,16 +33,8 @@ package-lock.json
 # IDE - VSCode
 .vscode/*
 !.vscode/settings.json
-.project
-.classpath
-.c9/
-*.launch
-.settings/
-*.sublime-workspace
 
 # IDE - VSCode
-.vscode/*
-!.vscode/settings.json
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
