--- a/packages/lib.pool/.gitignore
+++ b/packages/lib.pool/.gitignore
@@ -3,6 +3,7 @@
 # compiled output
 /build
 /dist
+/doc
 /dist-server
 /tmp
 /out-tsc
@@ -31,16 +32,8 @@ package-lock.json
 # IDE - VSCode
 .vscode/*
 !.vscode/settings.json
-.project
-.classpath
-.c9/
-*.launch
-.settings/
-*.sublime-workspace
 
 # IDE - VSCode
-.vscode/*
-!.vscode/settings.json
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
