lib.async api doc

--- a/packages/lib.async/package.json
+++ b/packages/lib.async/package.json
@@ -1,38 +1,38 @@
 {
     "name": "@thermopylae/lib.async",
-    "description": "Utilities for async operations and concurrency",
+    "description": "Utilities for async operations.",
     "keywords": [
         "library"
     ],
     "version": "0.0.1",
-    "author": "Rusu Marin dimarusu2000@gmail.com",
-    "main": "dist/index.js",
+    "author": "Rusu Marin <dimarusu2000@gmail.com>",
+    "repository": "https://github.com/marinrusu1997/thermopylae/tree/master/packages/lib.async",
+    "main": "./dist/index.js",
     "exports": "./dist/index.js",
-    "types": "dist/index.d.ts",
+    "types": "./dist/index.d.ts",
     "files": [
         "dist/**/*"
     ],
     "scripts": {
         "lint": "eslint \"lib/**/*.ts\" \"test/**/*.ts\" --fix",
         "build": "gulp build",
+        "doc": "gulp doc",
         "test": "gulp test",
+        "report": "gulp report",
         "coverage": "gulp coverage",
         "coverage:show": "gulp coverageShow",
         "debug": "gulp debug",
         "clean": "gulp clean",
         "purge": "gulp purge",
-        "update": "gulp stickToMajorSemver && npm update --dev --force -verbose",
-        "bumpVersion": "timestamp=$(date \"+%s\") && npm version 0.0.$timestamp",
-        "precommit": "npm run lint",
-        "prepublishOnly": "npm run lint && npm run clean && npm run build && npm run bumpVersion && gulp stickToMajorSemver",
+        "prepublishOnly": "npm run lint && npm run clean && npm run build",
         "unpublish": "npm unpublish --force $npm_package_name"
     },
     "dependencies": {
+        "@thermopylae/core.declarations": "0",
         "@thermopylae/lib.exception": "0",
         "tiny-async-pool": "1"
     },
     "devDependencies": {
-        "@thermopylae/core.declarations": "0",
         "@thermopylae/dev.unit-test": "0",
         "@thermopylae/lib.utils": "0",
         "@thermopylae/dev.environment": "0",
@@ -50,6 +50,6 @@
     "engines": {
         "node": ">= 16"
     },
-    "license": "ISC",
+    "license": "MIT",
     "type": "commonjs"
 }
