--- a/packages/lib.utils/package.json
+++ b/packages/lib.utils/package.json
@@ -4,12 +4,12 @@
     "keywords": [
         "library"
     ],
-    "version": "0.0.1627901399",
+    "version": "0.0.1",
     "author": "Rusu Marin <dimarusu2000@gmail.com>",
     "repository": "https://github.com/marinrusu1997/thermopylae/tree/master/packages/lib.utils",
-    "main": "dist/index.js",
+    "main": "./dist/index.js",
     "exports": "./dist/index.js",
-    "typings": "dist/index.d.ts",
+    "types": "./dist/index.d.ts",
     "files": [
         "dist/**/*"
     ],
@@ -24,9 +24,8 @@
         "debug": "gulp debug",
         "clean": "gulp clean",
         "purge": "gulp purge",
-        "update": "gulp stickToMajorSemver && npm update --dev --force -verbose",
-        "bumpVersion": "timestamp=$(date \"+%s\") && npm version 0.0.$timestamp",
-        "prepublishOnly": "npm run lint && npm run clean && npm run build && npm run bumpVersion && gulp stickToMajorSemver"
+        "prepublishOnly": "npm run lint && npm run clean && npm run build",
+        "unpublish": "npm unpublish --force $npm_package_name"
     },
     "dependencies": {
         "@thermopylae/core.declarations": "0",
