--- a/packages/lib.geoip/package.json
+++ b/packages/lib.geoip/package.json
@@ -1,14 +1,15 @@
 {
     "name": "@thermopylae/lib.geoip",
-    "description": "Geo location based on ip address.",
+    "description": "Geolocation based on ip address.",
     "keywords": [
         "library"
     ],
     "version": "0.0.1",
     "author": "Rusu Marin <dimarusu2000@gmail.com>",
-    "main": "dist/index.js",
+    "repository": "https://github.com/marinrusu1997/thermopylae/tree/master/packages/lib.geoip",
+    "main": "./dist/index.js",
     "exports": "./dist/index.js",
-    "types": "dist/index.d.ts",
+    "types": "./dist/index.d.ts",
     "files": [
         "dist/**/*"
     ],
@@ -16,7 +17,6 @@
         "lint": "eslint \"lib/**/*.ts\" \"test/**/*.ts\" --fix",
         "build": "gulp build",
         "doc": "gulp doc",
-        "readme": "gulp readme",
         "test": "gulp test",
         "report": "gulp report",
         "coverage": "gulp coverage",
@@ -24,10 +24,7 @@
         "debug": "gulp debug",
         "clean": "gulp clean",
         "purge": "gulp purge",
-        "update": "gulp stickToMajorSemver && npm update --dev --force -verbose",
-        "bumpVersion": "timestamp=$(date \"+%s\") && npm version 0.0.$timestamp",
-        "precommit": "npm run lint",
-        "prepublishOnly": "npm run lint && npm run clean && npm run build && npm run bumpVersion && gulp stickToMajorSemver && gulp readme",
+        "prepublishOnly": "npm run lint && npm run clean && npm run build",
         "unpublish": "npm unpublish --force $npm_package_name"
     },
     "dependencies": {
@@ -55,6 +52,6 @@
     "engines": {
         "node": ">= 16"
     },
-    "license": "ISC",
+    "license": "MIT",
     "type": "commonjs"
 }
