--- a/packages/lib.heap/package.json
+++ b/packages/lib.heap/package.json
@@ -6,7 +6,7 @@
     ],
     "version": "0.0.1",
     "author": "Rusu Marin <dimarusu2000@gmail.com>",
-    "license": "ISC",
+    "repository": "https://github.com/marinrusu1997/thermopylae/tree/master/packages/lib.pool",
     "main": "dist/index.js",
     "exports": "./dist/index.js",
     "types": "dist/index.d.ts",
@@ -16,6 +16,7 @@
     "scripts": {
         "lint": "eslint \"lib/**/*.ts\" \"test/**/*.ts\" --fix",
         "build": "gulp build",
+        "doc": "gulp doc",
         "test": "gulp test",
         "report": "gulp report",
         "coverage": "gulp coverage",
@@ -23,10 +24,22 @@
         "debug": "gulp debug",
         "clean": "gulp clean",
         "purge": "gulp purge",
-        "update": "gulp stickToMajorSemver && npm update --dev --force -verbose",
-        "bumpVersion": "timestamp=$(date \"+%s\") && npm version 0.0.$timestamp",
-        "prepublishOnly": "npm run lint && npm run clean && npm run build && npm run bumpVersion && gulp stickToMajorSemver && gulp readme",
+        "prepublishOnly": "npm run lint && npm run clean && npm run build",
         "unpublish": "npm unpublish --force $npm_package_name"
+    },
+    "dependencies": {
+        "@thermopylae/core.declarations": "0",
+        "lodash.isfunction": "3"
+    },
+    "devDependencies": {
+        "@thermopylae/dev.environment": "0",
+        "@thermopylae/dev.unit-test": "0",
+        "@thermopylae/lib.utils": "0",
+        "@types/lodash.isfunction": "3"
+    },
+    "peerDependencies": {
+        "mocha": "8",
+        "chai": "4"
     },
     "lint-staged": {
         "*.ts": [
@@ -36,19 +49,6 @@
     "engines": {
         "node": ">= 16"
     },
-    "dependencies": {
-        "@thermopylae/core.declarations": "0",
-        "@thermopylae/lib.exception": "0",
-        "lodash.isfunction": "3"
-    },
-    "devDependencies": {
-        "@thermopylae/dev.unit-test": "0",
-        "@thermopylae/lib.utils": "0",
-        "@thermopylae/dev.environment": "0",
-        "@types/lodash.isfunction": "3"
-    },
-    "peerDependencies": {
-        "mocha": "8"
-    },
+    "license": "MIT",
     "type": "commonjs"
 }
