--- a/packages/lib.user-session.commons/package.json
+++ b/packages/lib.user-session.commons/package.json
@@ -6,9 +6,8 @@
         "commons"
     ],
     "version": "0.0.1",
-    "author": "Rusu Marin dimarusu2000@gmail.com",
-    "main": "dist/index.js",
-    "exports": "./dist/index.js",
+    "author": "Rusu Marin <dimarusu2000@gmail.com>",
+    "repository": "https://github.com/marinrusu1997/thermopylae/tree/master/packages/lib.user-session.commons",
     "types": "dist/index.d.ts",
     "files": [
         "dist/**/*"
@@ -17,7 +16,6 @@
         "lint": "eslint \"lib/**/*.ts\" \"test/**/*.ts\" --fix",
         "build": "gulp build",
         "doc": "gulp doc",
-        "readme": "gulp readme",
         "test": "gulp test",
         "report": "gulp report",
         "coverage": "gulp coverage",
@@ -25,10 +23,7 @@
         "debug": "gulp debug",
         "clean": "gulp clean",
         "purge": "gulp purge",
-        "update": "gulp stickToMajorSemver && npm update --dev --force -verbose",
-        "bumpVersion": "timestamp=$(date \"+%s\") && npm version 0.0.$timestamp",
-        "precommit": "npm run lint",
-        "prepublishOnly": "npm run lint && npm run clean && npm run build && npm run bumpVersion && gulp stickToMajorSemver && gulp readme",
+        "prepublishOnly": "npm run lint && npm run clean && npm run build",
         "unpublish": "npm unpublish --force $npm_package_name"
     },
     "dependencies": {
@@ -39,7 +34,8 @@
         "@thermopylae/dev.environment": "0"
     },
     "peerDependencies": {
-        "mocha": "8"
+        "mocha": "8",
+        "chai": "4"
     },
     "lint-staged": {
         "*.ts": [
@@ -49,6 +45,6 @@
     "engines": {
         "node": ">= 16"
     },
-    "license": "ISC",
+    "license": "MIT",
     "type": "commonjs"
 }
