--- a/packages/lib.utils/package.json
+++ b/packages/lib.utils/package.json
@@ -2,11 +2,13 @@
     "name": "@thermopylae/lib.utils",
     "description": "Utility functions.",
     "keywords": [
-        "library"
+        "thermopylae",
+        "library",
+        "utils"
     ],
     "version": "0.0.1",
     "author": "Rusu Marin <dimarusu2000@gmail.com>",
-    "repository": "https://github.com/marinrusu1997/thermopylae/tree/master/packages/lib.utils",
+    "repository": "https://github.com/marinrusu1997/thermopylae",
     "main": "./dist/index.js",
     "exports": "./dist/index.js",
     "types": "./dist/index.d.ts",
