--- a/packages/core.adapter.fastify/package.json
+++ b/packages/core.adapter.fastify/package.json
@@ -2,13 +2,14 @@
     "name": "@thermopylae/core.adapter.fastify",
     "description": "Fastify adapter for Thermopylae framework.",
     "keywords": [
+        "thermopylae",
         "core",
         "adapter",
         "fastify"
     ],
     "version": "0.0.1",
     "author": "Rusu Marin <dimarusu2000@gmail.com>",
-    "repository": "https://github.com/marinrusu1997/thermopylae/tree/master/packages/core.adapter.fastify",
+    "repository": "https://github.com/marinrusu1997/thermopylae",
     "main": "dist/index.js",
     "exports": "./dist/index.js",
     "types": "dist/index.d.ts",
