--- a/packages/core.jwt-session/package.json
+++ b/packages/core.jwt-session/package.json
@@ -2,11 +2,15 @@
     "name": "@thermopylae/core.jwt-session",
     "description": "JWT user session for HTTP interface.",
     "keywords": [
-        "core"
+        "thermopylae",
+        "core",
+        "session",
+        "jwt",
+        "user-session"
     ],
     "version": "0.0.1",
     "author": "Rusu Marin <dimarusu2000@gmail.com>",
-    "repository": "https://github.com/marinrusu1997/thermopylae/tree/master/packages/core.jwt-session",
+    "repository": "https://github.com/marinrusu1997/thermopylae",
     "main": "dist/index.js",
     "exports": "./dist/index.js",
     "types": "dist/index.d.ts",
