--- a/packages/core.logger/package.json
+++ b/packages/core.logger/package.json
@@ -2,11 +2,13 @@
     "name": "@thermopylae/core.logger",
     "description": "Logger for core Thermopylae modules.",
     "keywords": [
-        "core"
+        "thermopylae",
+        "core",
+        "logger"
     ],
     "version": "0.0.1",
     "author": "Rusu Marin <dimarusu2000@gmail.com>",
-    "repository": "https://github.com/marinrusu1997/thermopylae/tree/master/packages/core.logger",
+    "repository": "https://github.com/marinrusu1997/thermopylae",
     "main": "dist/index.js",
     "exports": "./dist/index.js",
     "types": "dist/index.d.ts",
