--- a/packages/core.redis/package.json
+++ b/packages/core.redis/package.json
@@ -2,11 +2,14 @@
     "name": "@thermopylae/core.redis",
     "description": "Redis client.",
     "keywords": [
-        "core"
+        "thermopylae",
+        "core",
+        "redis",
+        "client"
     ],
     "version": "0.0.1",
     "author": "Rusu Marin <dimarusu2000@gmail.com>",
-    "repository": "https://github.com/marinrusu1997/thermopylae/tree/master/packages/core.redis",
+    "repository": "https://github.com/marinrusu1997/thermopylae",
     "main": "dist/index.js",
     "exports": "./dist/index.js",
     "types": "dist/index.d.ts",
