--- a/packages/core.user-session.commons/package.json
+++ b/packages/core.user-session.commons/package.json
@@ -2,12 +2,14 @@
     "name": "@thermopylae/core.user-session.commons",
     "description": "Common declaration and implementations for core user session modules.",
     "keywords": [
+        "thermopylae",
         "core",
-        "commons"
+        "session",
+        "user-session"
     ],
     "version": "0.0.1",
     "author": "Rusu Marin <dimarusu2000@gmail.com>",
-    "repository": "https://github.com/marinrusu1997/thermopylae/tree/master/packages/core.user-session.commons",
+    "repository": "https://github.com/marinrusu1997/thermopylae",
     "main": "dist/index.js",
     "types": "dist/index.d.ts",
     "files": [
@@ -55,6 +57,5 @@
         "node": ">= 16"
     },
     "license": "MIT",
-    "type": "commonjs",
-    "exports": "./dist/index.js"
+    "type": "commonjs"
 }
