--- a/packages/lib.async/package.json
+++ b/packages/lib.async/package.json
@@ -2,11 +2,14 @@
     "name": "@thermopylae/lib.async",
     "description": "Utilities for async operations.",
     "keywords": [
-        "library"
+        "thermopylae",
+        "library",
+        "async",
+        "utils"
     ],
     "version": "0.0.1",
     "author": "Rusu Marin <dimarusu2000@gmail.com>",
-    "repository": "https://github.com/marinrusu1997/thermopylae/tree/master/packages/lib.async",
+    "repository": "https://github.com/marinrusu1997/thermopylae",
     "main": "./dist/index.js",
     "exports": "./dist/index.js",
     "types": "./dist/index.d.ts",
