--- a/packages/lib.collection/package.json
+++ b/packages/lib.collection/package.json
@@ -2,11 +2,14 @@
     "name": "@thermopylae/lib.collection",
     "description": "MongoDB like collection.",
     "keywords": [
-        "library"
+        "thermopylae",
+        "library",
+        "collection",
+        "mongo"
     ],
     "version": "0.0.1",
     "author": "Rusu Marin <dimarusu2000@gmail.com>",
-    "repository": "https://github.com/marinrusu1997/thermopylae/tree/master/packages/lib.collection",
+    "repository": "https://github.com/marinrusu1997/thermopylae",
     "main": "dist/index.js",
     "exports": "./dist/index.js",
     "types": "dist/index.d.ts",
