--- a/packages/lib.email/package.json
+++ b/packages/lib.email/package.json
@@ -2,11 +2,15 @@
     "name": "@thermopylae/lib.email",
     "description": "Email client.",
     "keywords": [
-        "library"
+        "thermopylae",
+        "library",
+        "email",
+        "client",
+        "nodemailer"
     ],
     "version": "0.0.1",
     "author": "Rusu Marin <dimarusu2000@gmail.com>",
-    "repository": "https://github.com/marinrusu1997/thermopylae/tree/master/packages/lib.email",
+    "repository": "https://github.com/marinrusu1997/thermopylae",
     "main": "./dist/index.js",
     "exports": "./dist/index.js",
     "types": "./dist/index.d.ts",
