--- a/packages/lib.exception/package.json
+++ b/packages/lib.exception/package.json
@@ -2,11 +2,13 @@
     "name": "@thermopylae/lib.exception",
     "description": "General purpose exception.",
     "keywords": [
-        "library"
+        "thermopylae",
+        "library",
+        "exception"
     ],
     "version": "0.0.1",
     "author": "Rusu Marin <dimarusu2000@gmail.com>",
-    "repository": "https://github.com/marinrusu1997/thermopylae/tree/master/packages/lib.exception",
+    "repository": "https://github.com/marinrusu1997/thermopylae",
     "main": "dist/index.js",
     "exports": "./dist/index.js",
     "types": "dist/index.d.ts",
