--- a/packages/lib.heap/package.json
+++ b/packages/lib.heap/package.json
@@ -2,11 +2,13 @@
     "name": "@thermopylae/lib.heap",
     "description": "Binary heap.",
     "keywords": [
-        "library"
+        "thermopylae",
+        "library",
+        "heap"
     ],
     "version": "0.0.1",
     "author": "Rusu Marin <dimarusu2000@gmail.com>",
-    "repository": "https://github.com/marinrusu1997/thermopylae/tree/master/packages/lib.pool",
+    "repository": "https://github.com/marinrusu1997/thermopylae",
     "main": "dist/index.js",
     "exports": "./dist/index.js",
     "types": "dist/index.d.ts",
