--- a/packages/lib.pool/package.json
+++ b/packages/lib.pool/package.json
@@ -2,11 +2,14 @@
     "name": "@thermopylae/lib.pool",
     "description": "Resources pool.",
     "keywords": [
-        "library"
+        "thermopylae",
+        "library",
+        "pool",
+        "object-pool"
     ],
     "version": "0.0.1",
     "author": "Rusu Marin <dimarusu2000@gmail.com>",
-    "repository": "https://github.com/marinrusu1997/thermopylae/tree/master/packages/lib.pool",
+    "repository": "https://github.com/marinrusu1997/thermopylae",
     "main": "dist/index.js",
     "exports": "./dist/index.js",
     "types": "dist/index.d.ts",
