--- a/packages/lib.user-session.commons/package.json
+++ b/packages/lib.user-session.commons/package.json
@@ -2,12 +2,14 @@
     "name": "@thermopylae/lib.user-session.commons",
     "description": "Common declarations for user session implementations.",
     "keywords": [
+        "thermopylae",
         "library",
-        "commons"
+        "session",
+        "user-session"
     ],
     "version": "0.0.1",
     "author": "Rusu Marin <dimarusu2000@gmail.com>",
-    "repository": "https://github.com/marinrusu1997/thermopylae/tree/master/packages/lib.user-session.commons",
+    "repository": "https://github.com/marinrusu1997/thermopylae",
     "types": "dist/index.d.ts",
     "files": [
         "dist/**/*"
