--- a/packages/lib.user-session/package.json
+++ b/packages/lib.user-session/package.json
@@ -2,11 +2,14 @@
     "name": "@thermopylae/lib.user-session",
     "description": "Stateful implementation of the user session.",
     "keywords": [
-        "library"
+        "thermopylae",
+        "library",
+        "session",
+        "user-session"
     ],
     "version": "0.0.1",
     "author": "Rusu Marin <dimarusu2000@gmail.com>",
-    "repository": "https://github.com/marinrusu1997/thermopylae/tree/master/packages/lib.user-session",
+    "repository": "https://github.com/marinrusu1997/thermopylae",
     "main": "dist/index.js",
     "exports": "./dist/index.js",
     "types": "dist/index.d.ts",
